# MythCore-OverWoW

./: .hgignore  README.md
cmake/: showoptions.cmake
dep/: CMakeLists.txt
dep/g3dlite/source/: FileSystem.cpp
dep/jemalloc/: CMakeLists.txt
sql/: #6xxx_myth_update_characters.sql  #6xxx_myth_update_world.sql  #6xxx_trinity_update_world.sql
sql/base/: auth_database.sql  characters_database.sql
sql/enhanced_edition_update/: #6xxx_dev_myth_gm_commands.sql  #6xxx_myth_gm_commands.sql  #6xxx_myth_update_world_db_cleanup.sql  #6xxx_myth_update_world_wipe_locales.sql
sql/enhanced_edition_update/_old/: #6xxx_trinity_update_world_milestone_v6.0.sql  #6xxx_trinity_update_world_milestone_v6.1.sql
sql/enhanced_edition_update/characters_update/_old/: 1275_trinity_9632_characters.sql  1450_trinity_9668_characters.sql  1500_trinity_9716_characters.sql  2276_trinity_10030_characters.sql  2730_trinity_10084_characters.sql  3028_trinity_10241_characters.sql  340_trinity_8971_characters.sql  3419_trinity_10475_characters.sql  3748_trinity_10548_characters.sql  4085_trinity_10654_characters.sql  428_trinity_9092_characters.sql  4295_trinity_10741_characters.sql  4354_trinity_10777_characters.sql  4491_trinity_10828_characters.sql  4980_trinity_1xxxx_characters.sql  500_trinity_9160_characters.sql  55_trinity_8880_auth.sql  (+1 more)
src/server/authserver/: Main.cpp
src/server/game/: CMakeLists.txt
src/server/scripts/: CMakeLists.txt  OverWoW.url
src/server/shared/: CMakeLists.txt  SystemConfig.h
src/server/worldserver/: CMakeLists.txt  Main.cpp  Master.cpp  worldserver.conf.dist
(+598 files in other folders)
